--- a/index.html
+++ b/index.html
@@ -36,23 +36,13 @@
                </div>
            </div>
        </nav>
-
-       <!-- THREE COLUMNS -->
-       <div class="container text-center">
-           <div class="row">
-               <div class="col-sm-4 px-5 my-3">
-                   <img src="img/placeholder.png" class="img-fluid rounded-circle mb-3 feature">
-                   <h5>Column</h5>
-               </div>
-               <div class="col-sm-4 px-5 my-3">
-                       <img src="img/placeholder.png" class="img-fluid rounded-circle mb-3 feature">
-                       <h5>Column</h5>
-               </div>
-               <div class="col-sm-4 px-5 my-3">
-                   <img src="img/placeholder.png" class="img-fluid rounded-circle mb-3 feature">
-                   <h5>Column</h5>
-               </div>
-           </div>
+         <div id="video-background">
+            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/JPzREbuXkCM?autoplay=1&mute=1&loop=1&playlist=JPzREbuXkCM&controls=0&disablekb=1&modestbranding=1&rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        </div>
+        <div id="website-content">
+            <h1>Explore Mongolia</h1>
+            <p>Your Essential Guide Starts Here</p>
+        </div>
        </div>
    </body>
 </html>
